[package]
name = "friendbox"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
